Fix publication hover card on IE

--- a/assets/scss/molecules/cards/_publication-card.scss
+++ b/assets/scss/molecules/cards/_publication-card.scss
@@ -59,6 +59,10 @@
                 height: 100%;
                 padding: 63px 30px;
 
+                @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+                    text-align: center;
+                }
+
                 .image {
                     height: 100%;
                     display: flex;
@@ -72,6 +76,14 @@
                         @include breakpoint(small only) {
                             height: 100%;
                         }
+
+                        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+                            height: 100%;
+                        }
+                    }
+
+                    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+                        display: block;
                     }
                 }
 
